# REV-EMURGO-CDA-PROJECT

./: CHANGELOG.md  README.md  RevPlayermatchCDA.cabal
RevPlayermatchCDA/: logTeam.txt
RevPlayermatchCDA/app/: Main.hs
