cabal-version:      2.4
name:               RevPlayermatchCDA
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: RB's TMB App!

-- A longer description of the package.
-- description: A simple app to make numbers of group with balanced parameter. Submitted to complete Emurgo Cardano Developer Associate program

-- A URL where users can report bugs.
-- bug-reports: rendi.works@gmail.com

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author: rendi.works@gmail.com

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer: rendi.works@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable RevPlayermatchCDA
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      directory,
                      transformers,
                      time,
                      mtl
    hs-source-dirs:   app
    default-language: Haskell2010
